--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -49,7 +49,7 @@
 \section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
 \import{./}{taxonomy_analysis.ltx}
 
-\section{Combined algorithm}\label{section:algorithm}
+\section{Hybrid algorithm}\label{section:algorithm}
 \import{./}{algorithm.ltx}
 
 \section{Evaluation}\label{section:evaluation}
