--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -26,6 +26,22 @@
 	url = {https://transacl.org/ojs/index.php/tacl/article/view/570},
 	pages = {211--225}
 }
+% skip-gram for phrases
+@article{Mikolov2013a,
+  author    = {Tomas Mikolov and
+               Ilya Sutskever and
+               Kai Chen and
+               Greg Corrado and
+               Jeffrey Dean},
+  title     = {Distributed Representations of Words and Phrases and their Compositionality},
+  journal   = {CoRR},
+  volume    = {abs/1310.4546},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1310.4546},
+  timestamp = {Thu, 07 May 2015 20:02:01 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/MikolovSCCD13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 % explanation for skip-gram model
 @article{Goldberg14,
   author    = {Yoav Goldberg and
