--- a/thesis/introduction.ltx
+++ b/thesis/introduction.ltx
@@ -1,6 +1,7 @@
 \textbf{TODO: Motivation.  Related work. Justify novelty. Solution. Evaluation.}
 
 The thesis is structured as follows.
+\textbf{TODO: apply changes of outline to this paragraph}
 Section~\ref{section:foundations} defines the concepts related to Wikidata, taxonomies, similarity measures
 and k-nearest-neighbors classification. Subsequently, the problem statement is formalized and its corresponding
 challenges listed.
