--- a/thesis/neural_networks.ltx
+++ b/thesis/neural_networks.ltx
@@ -57,7 +57,7 @@ $v_i, v_j \in V$ and $e_{ij} \in E$. \textbf{TODO: finish this explanation}
 
 \textbf{it will be fun to explain the second approach}
 
-\subsubsection{Deep neural networks for graph representation}
+\subsubsection{Deep neural networks for graph representation}\label{section:graph embeddings}
 \fullcite{Cao2016} deep neural networks for graph representation \\
 \fullcite{Raghu2016} expressivity of deep neural networks \\
 The idea of representing semantic objects like words or vertices, which was already explored in the previous
