--- a/thesis/taxonomy_analysis.ltx
+++ b/thesis/taxonomy_analysis.ltx
@@ -100,12 +100,10 @@ $\approx 59\%$ of classes have only $1$ instance.
 
 At the same time the average of subclasses per class halved to $\approx 0.4$ 
 (see Figure~\ref{fig:unlinked labeled instantiated subclass count}). 
-\textbf{can i just do such an assumption? the data supports it a bit, but i am not searching for counterclaims.
-and the assumption is not directly relevant to the thesis.}
 Combined with the 
 unchanged median of $1$ instance per class, supports the assumption, that classes are mainly
-created for the purpose of grouping instances.
-While adding the newly created class to the main taxonomy is being neglected.
+created for the purpose of grouping instances,
+while adding the newly created class to the main taxonomy is being neglected.
 
 \begin{figure}
 \centering
