--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -353,7 +353,63 @@ school = {SWISS FEDERAL INSTITUTE OF TECHNOLOGY ZURICH},
 title = {{Similarity Search in High-Dimensional Vector Spaces}},
 year = {2000}
 }
-
+% distance measures
+@Inbook{Houle2010,
+author="Houle, Michael E.
+and Kriegel, Hans-Peter
+and Kr{\"o}ger, Peer
+and Schubert, Erich
+and Zimek, Arthur",
+editor="Gertz, Michael
+and Lud{\"a}scher, Bertram",
+title="Can Shared-Neighbor Distances Defeat the Curse of Dimensionality?",
+bookTitle="Scientific and Statistical Database Management: 22nd International Conference, SSDBM 2010, Heidelberg, Germany, June 30--July 2, 2010. Proceedings",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="482--500",
+isbn="978-3-642-13818-8",
+doi="10.1007/978-3-642-13818-8_34",
+url="http://dx.doi.org/10.1007/978-3-642-13818-8_34"
+}
+% nearest neighbor in high dimensions, curse of dimensionality
+@article{Aggarwal2001,
+abstract = {In recent years, the effect of the curse of high dimensionality has been studied in great detail on several problems such as clustering, nearest neighbor search, and indexing. In high dimensional space the data becomes sparse, and traditional indexing and algorithmic techniques fail from a effciency and/or effectiveness perspective. Recent research results show that in high dimensional space, the concept of proximity, distance or nearest neighbor may not even be qualitatively meaningful. In this paper, we view the dimensionality curse from the point of view of the distance metrics which are used to measure the similarity between objects. We specifically examine the behavior of the commonly used L k norm and show that the problem of meaningfulness in high dimensionality is sensitive to the value of k. For example, this means that the Manhattan distance metric L(1 norm) is consistently more preferable than the Euclidean distance metric L(2 norm) for high dimensional data mining applications. Using the intuition derived from our analysis, we introduce and examine a natural extension of the L k norm to fractional distance metrics. We show that the fractional distance metric provides more meaningful results both from the theoretical and empirical perspective. The results show that fractional distance metrics can significantly improve the effectiveness of standard clustering algorithms such as the k-means algorithm.},
+archivePrefix = {arXiv},
+arxivId = {0812.0624},
+author = {Aggarwal, Charu C. and Hinneburg, Alexander and Keim, Daniel A.},
+doi = {10.1007/3-540-44503-X_27},
+eprint = {0812.0624},
+isbn = {978-3-540-41456-8},
+issn = {0956-7925},
+journal = {Database Theory – ICDT 2001},
+mendeley-groups = {Bachelor thesis},
+pages = {420--434},
+pmid = {25246403},
+publisher = {Springer Berlin Heidelberg},
+title = {{On the surprising behavior of distance metrics in high dimensional space}},
+url = {http://link.springer.com/10.1007/3-540-44503-X{\_}27},
+year = {2001}
+}
+% ML in general
+@article{Domingos2012,
+ author = {Domingos, Pedro},
+ title = {A Few Useful Things to Know About Machine Learning},
+ journal = {Commun. ACM},
+ issue_date = {October 2012},
+ volume = {55},
+ number = {10},
+ month = oct,
+ year = {2012},
+ issn = {0001-0782},
+ pages = {78--87},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2347736.2347755},
+ doi = {10.1145/2347736.2347755},
+ acmid = {2347755},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 % ontology mapping, similarity
 @article{Rodriguez2003,
  author = {Rodr\'{\i}guez, M. Andrea and Egenhofer, Max J.},
