--- a/thesis/taxonomy_analysis.ltx
+++ b/thesis/taxonomy_analysis.ltx
@@ -1,10 +1,10 @@
-For the task of developing an algorithm, which takes unlinked classes as input, it is necessary to know,
+For the task of developing an algorithm, which takes orphan classes as input, it is necessary to know,
 what information the classes carry and if there are certain patterns among the classes.
 For this purpose an analysis of the taxonomy needs to be carried out, which may answer questions.
 
 The taxonomy contained in the Wikidata dump of \dumpdate{} was analyzed.
 Classes were recognized as defined in Section~\ref{section:wikidata}. 
-Unlinked classes were identified by checking whether a class does not have the \textit{subclass of (P279)} property.
+Orphan classes were identified by checking whether a class does not have the \textit{subclass of (P279)} property.
 The taxonomy contained a total of $1299501$ classes at this time.
 
 \subsection{Root taxonomy}
@@ -25,21 +25,21 @@ The longest shortest distance between the root and a leaf class is $20$.
 The classes \textit{Q639064}, \textit{Q15978631} and \textit{Q151055} fulfill this characteristics. 
 Each of them is subclass of \textit{Homo (Q171283)}. 
 
-\subsection{Unlinked classes}
-The characteristics of all unlinked classes and the root class were analyzed.
+\subsection{Orphan classes}
+The characteristics of all orphan classes and the root class were analyzed.
 This set contains a total of $16373$ classes. $13807$ classes have an English label
 and $11534$ classes have a corresponding English Wikipedia page.
 
 Regarding the  number of unique properties (or statement groups) per class 
 (see Figure~\ref{fig:unlinked property count}) the median is $3$ and the average is $\approx 4.8$.
 Combined with the analyzed unique property frequency (see Figure~\ref{fig:unlinked property frequency}),
-it can be seen that many unlinked classes are linked to other knowledge bases and taxonomies
+it can be seen that many orphan classes are linked to other knowledge bases and taxonomies
 , e.g. Freebase or GND, using an identifier.
- Another  observation is that $901$ of the unlinked classes have properties related to taxons,
+ Another  observation is that $901$ of the orphan classes have properties related to taxons,
  which is a, to some degree, separate taxonomy in Wikidata, created with properties like
  \textit{taxon name (P225)}, \textit{parent taxon (P171)}, etc.
  
-Most unlinked classes have only $0$ to $1$ instances, the median is $1$ and the average
+Most orphan classes have only $0$ to $1$ instances, the median is $1$ and the average
 is $\approx 4.65$ instances per class (see Figure~\ref{fig:unlinked instance count}).
 There are however outliers with big numbers of instances, which skew the average number of instances per class.
 This may for example imply, that classes are created mainly for the purpose of grouping newly created
@@ -47,31 +47,31 @@ instances.
 
 The median and average for subclasses per class are $0$ and $\approx 0.85$ respectively 
 (see Figure~\ref{fig:unlinked subclass count}). This implies that the graph components of
-the unlinked classes are very small, and in most cases contain only the respective unlinked class.
+the orphan classes are very small, and in most cases contain only the respective orphan class.
  
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_property_count.png}
-\caption{Percentage of unlinked classes with a specific amount of unique properties. Wikidata (\dumpdate{})}
+\caption{Percentage of orphan classes with a specific amount of unique properties. Wikidata (\dumpdate{})}
 \label{fig:unlinked property count}
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_property_frequency.png}
-\caption{Frequency of properties in unlinked classes. Wikidata (\dumpdate{})}
+\caption{Frequency of properties in orphan classes. Wikidata (\dumpdate{})}
 \label{fig:unlinked property frequency}
 \end{figure}
 \begin{figure}
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_instance_count.png}
-\caption{Percentage of unlinked classes with a specific amount of instances. Wikidata (\dumpdate{})}
+\caption{Percentage of orphan classes with a specific amount of instances. Wikidata (\dumpdate{})}
 \label{fig:unlinked instance count}
 \centering
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_subclass_count.png}
-\caption{Percentage of unlinked classes with a specific amount of subclasses. Wikidata (\dumpdate{})}
+\caption{Percentage of orphan classes with a specific amount of subclasses. Wikidata (\dumpdate{})}
 \label{fig:unlinked subclass count}
 \end{figure}
 
 The question has to be asked,  whether an algorithm should try to handle the complete set of
-unlinked classes, or only a specific subset, which fulfills certain requirements.
+orphan classes, or only a specific subset, which fulfills certain requirements.
 The answer depends on what information such an algorithm requires as input.
-The full set of unlinked classes is problematic for use in an algorithm as there are few shared characteristics
+The full set of orphan classes is problematic for use in an algorithm as there are few shared characteristics
 over all classes.
 $\approx 16\%$ of classes are not labeled and $\approx 31.4\%$ of classes have no instances.
 Both labels and instances are useful characteristics for a class to have.
@@ -82,11 +82,11 @@ instances  to compute semantic similarity between classes.
 Therefore, I propose to only consider the set of classes, which have a label in the English language 
 and at least $1$ instance, as input for the algorithm.
 
-\subsection{Labeled, instantiated, unlinked classes}
-Following this argument, the subset of labeled, instantiated and unlinked classes was analyzed.
+\subsection{Labeled, instantiated orphan classes}
+Following this argument, the subset of labeled and instantiated orphan classes was analyzed.
 This set contains a total of $9157$ classes. $7557$ classes have an English Wikipedia page, which is 
 $\approx 82.5\%$ of all analyzed classes in the subset, and an increase of $\approx 12\%$ in comparison 
-to the full set of unlinked classes.
+to the full set of orphan classes.
 
 The average of unique properties per class increases from $4.8$ to $5.5$, while the median remains at $3$
 (see Figure~\ref{fig:unlinked labeled instantiated property count}).
@@ -108,19 +108,19 @@ while adding the newly created class to the main taxonomy is being neglected.
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_labeled_instantiated_property_count.png}
-\caption{Percentage of unlinked, labeled, instantiated classes with a specific amount of unique properties. Wikidata (\dumpdate{})}
+\caption{Percentage of labeled and instantiated orphan classes with a specific amount of unique properties. Wikidata (\dumpdate{})}
 \label{fig:unlinked labeled instantiated property count}
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_labeled_instantiated_property_frequency.png}
-\caption{Frequency of properties in unlinked, labeled, instantiated classes. Wikidata (\dumpdate{}))}
+\caption{Frequency of properties in labeled and instantiated orphan classes. Wikidata (\dumpdate{}))}
 \label{fig:unlinked labeled instantiated property frequency}
 \end{figure}
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_labeled_instantiated_instance_count.png}
-\caption{Percentage of unlinked, labeled, instantiated classes with a specific amount of instances. Wikidata (\dumpdate{}))}
+\caption{Percentage of labeled and instantiated orphan classes with a specific amount of instances. Wikidata (\dumpdate{}))}
 \label{fig:unlinked labeled instantiated instance count}
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/unlinked_labeled_instantiated_subclass_count.png}
-\caption{Percentage of unlinked, labeled, instantiated classes with a specific amount of subclasses. Wikidata 
+\caption{Percentage of labeled and instantiated orphan classes with a specific amount of subclasses. Wikidata 
 (\dumpdate{})}
 \label{fig:unlinked labeled instantiated subclass count}
 \end{figure}
